// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Render rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-avatar ant-avatar-circle"
>
  <span
    class="ant-avatar-string"
    style="opacity:0"
  />
</span>
`;

exports[`Avatar Render support size is number 1`] = `
<span
  class="ant-avatar ant-avatar-circle"
  style="width:100px;height:100px;line-height:100px;font-size:18px"
>
  <span
    class="ant-avatar-string"
    style="opacity:0"
  >
    TestString
  </span>
</span>
`;
